name:                issue-wanted-draft
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/FredArnold/issue-wanted-draft#readme
license:             BSD3
license-file:        LICENSE
author:              Frederic Arnold
maintainer:          frederic.arnold@tu-dortmund.de
copyright:           2019 Frederic Arnold
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       GithubInteraction
                     , AppState
                     , Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , github
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable issue-wanted-draft-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , issue-wanted-draft
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/FredArnold/issue-wanted-draft
